--- a/views/partials/category/form.hbs
+++ b/views/partials/category/form.hbs
@@ -1,6 +1,8 @@
 <form class="space-y-8 divide-y divide-gray-200" method="{{ method }}" action="/dashboard/categories">
   <div class="space-y-8 divide-y divide-gray-200">
     <div>
+      <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+
       <div>
         <h3 class="text-lg leading-6 font-medium text-gray-900">
           {{ title }}
